<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app_title">SCORES APP</string>
    <string name="library_app_title">LIBRARY APP</string>
    <string name="build_it_bigger_title">BUILD IT BIGGER</string>
    <string name="xyz_reader_button">XYZ READER</string>
    <string name="capstone_title">CAPSTONE: MY OWN APP</string>
</resources>
