<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_alignWithParentIfMissing="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer_button"
        android:background="@color/spotify_orange"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:onClick="button_Click"
        android:layout_alignStart="@+id/capstone_button"
        android:layout_alignEnd="@+id/capstone_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_title"
        android:id="@+id/scores_app_button"
        android:background="@color/spotify_orange"
        android:layout_below="@+id/spotify_streamer_button"
        android:layout_marginTop="10dp"
        android:onClick="button_Click"
        android:layout_alignEnd="@+id/spotify_streamer_button"
        android:layout_alignStart="@+id/spotify_streamer_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app_title"
        android:id="@+id/library_app_button"
        android:background="@color/spotify_orange"
        android:layout_below="@+id/scores_app_button"
        android:layout_marginTop="10dp"
        android:onClick="button_Click"
        android:layout_alignEnd="@+id/scores_app_button"
        android:layout_alignStart="@+id/scores_app_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_title"
        android:id="@+id/build_it_bigger_button"
        android:background="@color/spotify_orange"
        android:layout_marginTop="10dp"
        android:onClick="button_Click"
        android:layout_below="@+id/library_app_button"
        android:layout_alignEnd="@+id/library_app_button"
        android:layout_alignStart="@+id/library_app_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_button"
        android:id="@+id/xyz_reader_button"
        android:background="@color/spotify_orange"
        android:layout_marginTop="10dp"
        android:onClick="button_Click"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_alignStart="@+id/build_it_bigger_button"
        android:layout_alignEnd="@+id/build_it_bigger_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_title"
        android:id="@+id/capstone_button"
        android:background="@color/capstone_red"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/xyz_reader_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:onClick="button_Click"/>

</RelativeLayout>
